--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "license": "ISC",
     "devDependencies": {
         "nodemon": "^3.1.3"
-    }
+    },
+    "dependencies": {
+        "node-fetch": "^3.3.2"
+    },
+    "type": "module"
 }
