--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "justpush-javascript-sdk",
-    "version": "1.0.0",
+    "name": "@justpush/justpush-js-sdk",
+    "version": "1.0.1",
     "description": "",
     "main": "index.js",
     "scripts": {
@@ -10,10 +10,11 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "nodemon": "^3.1.3"
+        "nodemon": "3.1.3"
     },
     "dependencies": {
-        "node-fetch": "^3.3.2"
+        "node-fetch": "3.3.2"
     },
-    "type": "module"
+    "type": "module",
+    "homepage": "https://github.com/JustPush-io/justpush-sdk-js"
 }
