--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@justpush.io/justpush-js-sdk",
     "version": "1.0.4",
-    "description": "",
+    "description": "This is the JustPush JavaScript SDk. It facilites sending messages to the JustPush mobile app.",
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
@@ -9,7 +9,7 @@
         "test": "node src/tests/Topic.js && node src/tests/Message.js",
         "publish": "npm publish --access public"
     },
-    "author": "",
+    "author": "justpush.io",
     "license": "ISC",
     "devDependencies": {
         "nodemon": "3.1.3"
