--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@justpush.io/justpush-js-sdk",
     "version": "1.0.6",
-    "description": "This is the JustPush JavaScript SDk. It facilites sending messages to the JustPush mobile app.",
+    "description": "This is the JustPush JavaScript SDK. It facilites sending messages to the JustPush mobile app.",
     "main": "index.js",
     "scripts": {
         "test": "node src/tests/Topic.js && node src/tests/Message.js",
