--- a/package.json
+++ b/package.json
@@ -1,20 +1,33 @@
 {
     "name": "@justpush.io/justpush-js-sdk",
-    "version": "1.0.12",
-    "description": "This is the JustPush JavaScript SDK. It facilites sending messages to the JustPush mobile app.",
+    "version": "1.0.13",
+    "description": "JustPush JavaScript SDK for React and Node.js. Send messages to the JustPush mobile app.",
     "main": "index.js",
+    "browser": "index.js",
     "scripts": {
         "test": "node src/tests/Topic.js && node src/tests/Message.js",
         "publish": "npm publish --access public"
     },
     "author": "justpush.io",
     "license": "ISC",
+    "peerDependencies": {
+        "react": ">=16.8.0",
+        "react-dom": ">=16.8.0"
+    },
+    "optionalDependencies": {
+        "node-fetch": "^2.6.1"
+    },
     "devDependencies": {
         "nodemon": "3.1.3"
     },
-    "dependencies": {
-        "node-fetch": "2.6.1"
-    },
     "type": "module",
+    "keywords": [
+        "react",
+        "notifications",
+        "push-notifications",
+        "justpush",
+        "mobile",
+        "node"
+    ],
     "homepage": "https://github.com/JustPush-io/justpush-sdk-js"
 }
