--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
     "name": "@justpush.io/justpush-js-sdk",
-    "version": "1.0.13",
+    "version": "1.1.6",
     "description": "JustPush JavaScript SDK for React and Node.js. Send messages to the JustPush mobile app.",
-    "main": "index.js",
-    "browser": "index.js",
+    "main": "./dist/cjs/index.js",
+    "browser": "./dist/esm/index.js",
     "scripts": {
+        "build": "rm -rf dist && npm run build:esm && npm run build:cjs",
+        "build:esm": "mkdir -p dist/esm && babel src --out-dir dist/esm --copy-files",
+        "build:cjs": "mkdir -p dist/cjs && babel src --out-dir dist/cjs --copy-files --plugins @babel/plugin-transform-modules-commonjs",
         "test": "node src/tests/Topic.js && node src/tests/Message.js",
-        "publish": "npm publish --access public"
+        "prepublishOnly": "npm run build",
+        "publish": "npm run build &&npm publish --access public"
     },
     "author": "justpush.io",
     "license": "ISC",
@@ -18,6 +22,10 @@
         "node-fetch": "^2.6.1"
     },
     "devDependencies": {
+        "@babel/cli": "^7.27.0",
+        "@babel/core": "^7.26.10",
+        "@babel/plugin-transform-modules-commonjs": "^7.26.3",
+        "@babel/preset-env": "^7.26.9",
         "nodemon": "3.1.3"
     },
     "type": "module",
@@ -29,5 +37,17 @@
         "mobile",
         "node"
     ],
-    "homepage": "https://github.com/JustPush-io/justpush-sdk-js"
+    "homepage": "https://github.com/JustPush-io/justpush-sdk-js",
+    "module": "./dist/esm/index.js",
+    "exports": {
+        ".": {
+            "require": "./dist/cjs/index.js",
+            "import": "./dist/esm/index.js",
+            "default": "./dist/esm/index.js"
+        }
+    },
+    "files": [
+        "dist",
+        "src"
+    ]
 }
